--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -142,6 +142,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ed4553a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def undirected_to_directed(graph: nx.Graph) -> nx.DiGraph:\n",
+    "    \"\"\"\n",
+    "    Converts an undirected graph to a directed graph\n",
+    "    \"\"\"\n",
+    "    di_graph = nx.DiGraph()\n",
+    "    di_graph.add_edges_from(graph.edges())\n",
+    "    return di_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "3e57346c",
    "metadata": {},
