--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -143,11 +143,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c821009f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from networkx import Graph, DiGraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ed4553a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def undirected_to_directed(graph: nx.Graph) -> nx.DiGraph:\n",
+    "def undirected_to_directed(graph: Graph) -> DiGraph:\n",
     "    \"\"\"\n",
     "    Converts an undirected graph to a directed graph\n",
     "    \"\"\"\n",
