--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -153,6 +153,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "713366a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Graph graph = Graph()\n",
+    "Graph another_graph = Graph()\n",
+    "\n",
+    "graph = another_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ed4553a9",
    "metadata": {},
    "outputs": [],
