Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -153,24 +153,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "713366a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Graph graph = Graph()\n",
-    "Graph another_graph = Graph()\n",
-    "\n",
-    "graph = another_graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ed4553a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def undirected_to_directed(graph: Graph) -> DiGraph:\n",
+    "def undirected_to_directed(graph: nx.Graph) -> nx.DiGraph:\n",
     "    \"\"\"\n",
     "    Converts an undirected graph to a directed graph\n",
     "    \"\"\"\n",
