--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -141,13 +141,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c821009f",
+   "cell_type": "markdown",
+   "id": "265c8365",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from networkx import Graph, DiGraph"
+    "##### Helpful functions"
    ]
   },
   {
