--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -99,6 +99,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a62886d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[\n",
+    "    {\n",
+    "        \"func\": nx.betweenness_centrality,\n",
+    "        \"args\": \n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "3e57346c",
    "metadata": {},
