--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -106,8 +106,10 @@
    "source": [
     "[\n",
     "    {\n",
-    "        \"func\": nx.betweenness_centrality,\n",
-    "        \"args\": \n",
+    "        \"func\": nx.eigenvector_centrality_numpy,\n",
+    "        \"args\": {\n",
+    "            \"max_iter\": 10,\n",
+    "        }\n",
     "    }\n",
     "]"
    ]
