--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -104,14 +104,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[\n",
-    "    {\n",
-    "        \"func\": nx.eigenvector_centrality_numpy,\n",
-    "        \"args\": {\n",
-    "            \"max_iter\": 10,\n",
-    "        }\n",
+    "config = {\n",
+    "    \"func\": nx.eigenvector_centrality_numpy,\n",
+    "    \"args\": {\n",
+    "        \"max_iter\": 10,\n",
     "    }\n",
-    "]"
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10634c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config[\"func\"](di_graph, **config[\"args\"])\n",
+    "\n",
+    "config[\"func\"](di_graph, max_iter=10)"
    ]
   },
   {
