--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "\n",
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
     "from os import makedirs, listdir, pardir, getcwd\n",
+    "from dataclasses import dataclass\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -41,6 +42,24 @@
     "    di_graph = nx.DiGraph()\n",
     "    di_graph.add_edges_from(graph.edges())\n",
     "    return di_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39d0532c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class CentralityAlgorithm:\n",
+    "    \"\"\"\n",
+    "    A class to store centrality measures\n",
+    "    \"\"\"\n",
+    "    degree: dict\n",
+    "    closeness: dict\n",
+    "    betweenness: dict\n",
+    "    eigenvector: dict"
    ]
   },
   {
