--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -54,9 +54,9 @@
     "@dataclass\n",
     "class CentralityAlgorithm:\n",
     "    \"\"\"\n",
-    "    A class to store centrality measures\n",
+    "    A class to store centrality measures arguments\n",
     "    \"\"\"\n",
-    "    degree: dict\n",
+    "    func: nx.function\n",
     "    closeness: dict\n",
     "    betweenness: dict\n",
     "    eigenvector: dict"
