--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -51,12 +51,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Any\n",
+    "\n",
+    "\n",
     "@dataclass\n",
     "class CentralityAlgorithm:\n",
     "    \"\"\"\n",
     "    A class to store centrality measures arguments\n",
     "    \"\"\"\n",
-    "    func: nx.function\n",
+    "    func: Any\n",
     "    closeness: dict\n",
     "    betweenness: dict\n",
     "    eigenvector: dict"
