--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -59,7 +59,7 @@
     "    \"\"\"\n",
     "    A class to store centrality measures arguments\n",
     "    \"\"\"\n",
-    "    func: Any\n",
+    "    func: object\n",
     "    closeness: dict\n",
     "    betweenness: dict\n",
     "    eigenvector: dict"
