--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -51,18 +51,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Any\n",
-    "\n",
-    "\n",
     "@dataclass\n",
     "class CentralityAlgorithm:\n",
     "    \"\"\"\n",
-    "    A class to store centrality measures arguments\n",
+    "    A data-class to store centrality measures arguments and other options\n",
     "    \"\"\"\n",
     "    func: object\n",
-    "    closeness: dict\n",
-    "    betweenness: dict\n",
-    "    eigenvector: dict"
+    "    args: dict\n",
+    "    options: dict"
    ]
   },
   {
