Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -56,6 +56,7 @@
     "    \"\"\"\n",
     "    A data-class to store centrality measures arguments and other options\n",
     "    \"\"\"\n",
+    "    name: str\n",
     "    func: object\n",
     "    args: dict\n",
     "    options: dict"
