--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "39d0532c",
    "metadata": {},
    "outputs": [],
@@ -60,6 +60,82 @@
     "    func: object\n",
     "    args: dict\n",
     "    options: dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "873b2fbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CentralityAlgorithm(name='degree', func=<function degree_centrality at 0x7f92e1e128c0>, args={}, options={})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = CentralityAlgorithm(\"degree\", nx.degree_centrality, {}, {})\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ea32d44e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__annotations__',\n",
+       " '__class__',\n",
+       " '__dataclass_fields__',\n",
+       " '__dataclass_params__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__match_args__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'args',\n",
+       " 'func',\n",
+       " 'name',\n",
+       " 'options']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(a)"
    ]
   },
   {
@@ -118,11 +194,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4fe14a02",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'4R79.2': 0.15384615384615385,\n",
+       " 'F33A8.4': 0.038461538461538464,\n",
+       " 'K08E4.1': 0.038461538461538464,\n",
+       " 'Y37E3.9': 0.038461538461538464,\n",
+       " 'Y59A8B.1': 0.038461538461538464,\n",
+       " 'AC3.2': 0.038461538461538464,\n",
+       " 'C55A6.10': 0.038461538461538464,\n",
+       " 'AC3.7': 0.11538461538461539,\n",
+       " 'C36B7.6': 0.07692307692307693,\n",
+       " 'F55F8.5': 0.07692307692307693,\n",
+       " 'R166.2': 0.07692307692307693,\n",
+       " 'AC3.8': 0.11538461538461539,\n",
+       " 'AC7.2': 0.038461538461538464,\n",
+       " 'F59F5.6': 0.038461538461538464,\n",
+       " 'B0024.11': 0.11538461538461539,\n",
+       " 'K01G5.2': 0.038461538461538464,\n",
+       " 'K08H2.6': 0.038461538461538464,\n",
+       " 'Y74C9A.3': 0.038461538461538464,\n",
+       " 'B0024.13': 0.038461538461538464,\n",
+       " 'M142.1': 0.038461538461538464,\n",
+       " 'B0024.14': 0.07692307692307693,\n",
+       " 'D2021.2': 0.038461538461538464,\n",
+       " 'T16H12.5': 0.038461538461538464,\n",
+       " 'B0024.9': 0.11538461538461539,\n",
+       " 'T27A10.3': 0.038461538461538464,\n",
+       " 'T27E9.3': 0.038461538461538464,\n",
+       " 'ZK370.2': 0.038461538461538464}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.func(di_graph, **a.args)"
+   ]
   },
   {
    "cell_type": "code",
