--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -46,6 +46,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ebae4811",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Point:\n",
+    "    x: float\n",
+    "    y: float"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "39d0532c",
    "metadata": {},
