Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -54,7 +54,8 @@
     "@dataclass\n",
     "class Point:\n",
     "    x: float\n",
-    "    y: float"
+    "    y: float\n",
+    "    z: float"
    ]
   },
   {
