--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -60,6 +60,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c9db0df2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algorithms_to_run = []"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "39d0532c",
    "metadata": {},
@@ -94,8 +104,7 @@
     }
    ],
    "source": [
-    "a = CentralityAlgorithm(\"degree\", nx.degree_centrality, {}, {})\n",
-    "a"
+    "algorithms_to_run.append(CentralityAlgorithm(\"degree\", nx.degree_centrality, {}, {}))"
    ]
   },
   {
