--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "algorithms_to_run.append(CentralityAlgorithm(\"degree\", nx.degree_centrality, {}, {}))"
+    "algorithms_to_run.append(CentralityAlgorithm(\"degree\", nx.degree_centrality, { \"max_iter\": 100 }, {}))"
    ]
   },
   {
