--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -90,7 +90,8 @@
     }
    ],
    "source": [
-    "algorithms_to_run.append(CentralityAlgorithm(\"degree\", nx.degree_centrality, { \"max_iter\": 100 }, {}))"
+    "degree = CentralityAlgorithm(\"degree\", nx.degree_centrality, { \"max_iter\": 100 }, {})\n",
+    "algorithms_to_run.append(degree)"
    ]
   },
   {
