--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -74,19 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "873b2fbb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "CentralityAlgorithm(name='degree', func=<function degree_centrality at 0x7f92e1e128c0>, args={}, options={})"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'algorithms_to_run' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [16], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m degree \u001b[38;5;241m=\u001b[39m CentralityAlgorithm(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdegree\u001b[39m\u001b[38;5;124m\"\u001b[39m, nx\u001b[38;5;241m.\u001b[39mdegree_centrality, { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax_iter\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m100\u001b[39m }, {})\n\u001b[0;32m----> 2\u001b[0m algorithms_to_run\u001b[38;5;241m.\u001b[39mappend(degree)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'algorithms_to_run' is not defined"
+     ]
     }
    ],
    "source": [
