Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c9db0df2",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "39d0532c",
    "metadata": {},
    "outputs": [],
@@ -74,22 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "873b2fbb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'algorithms_to_run' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [16], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m degree \u001b[38;5;241m=\u001b[39m CentralityAlgorithm(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdegree\u001b[39m\u001b[38;5;124m\"\u001b[39m, nx\u001b[38;5;241m.\u001b[39mdegree_centrality, { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax_iter\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m100\u001b[39m }, {})\n\u001b[0;32m----> 2\u001b[0m algorithms_to_run\u001b[38;5;241m.\u001b[39mappend(degree)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'algorithms_to_run' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "degree = CentralityAlgorithm(\"degree\", nx.degree_centrality, { \"max_iter\": 100 }, {})\n",
     "algorithms_to_run.append(degree)"
@@ -97,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "942890ed",
    "metadata": {},
    "outputs": [],
@@ -108,92 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "9c4645e7-de80-4347-94e6-62f138e63ec1",
    "metadata": {},
    "outputs": [],
    "source": [
     "graph_fly = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0f988af1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "di_graph = undirected_to_directed(graph_fly)\n",
-    "di_graph.number_of_nodes()\n",
-    "di_graph.number_of_edges()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "4fe14a02",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'4R79.2': 0.15384615384615385,\n",
-       " 'F33A8.4': 0.038461538461538464,\n",
-       " 'K08E4.1': 0.038461538461538464,\n",
-       " 'Y37E3.9': 0.038461538461538464,\n",
-       " 'Y59A8B.1': 0.038461538461538464,\n",
-       " 'AC3.2': 0.038461538461538464,\n",
-       " 'C55A6.10': 0.038461538461538464,\n",
-       " 'AC3.7': 0.11538461538461539,\n",
-       " 'C36B7.6': 0.07692307692307693,\n",
-       " 'F55F8.5': 0.07692307692307693,\n",
-       " 'R166.2': 0.07692307692307693,\n",
-       " 'AC3.8': 0.11538461538461539,\n",
-       " 'AC7.2': 0.038461538461538464,\n",
-       " 'F59F5.6': 0.038461538461538464,\n",
-       " 'B0024.11': 0.11538461538461539,\n",
-       " 'K01G5.2': 0.038461538461538464,\n",
-       " 'K08H2.6': 0.038461538461538464,\n",
-       " 'Y74C9A.3': 0.038461538461538464,\n",
-       " 'B0024.13': 0.038461538461538464,\n",
-       " 'M142.1': 0.038461538461538464,\n",
-       " 'B0024.14': 0.07692307692307693,\n",
-       " 'D2021.2': 0.038461538461538464,\n",
-       " 'T16H12.5': 0.038461538461538464,\n",
-       " 'B0024.9': 0.11538461538461539,\n",
-       " 'T27A10.3': 0.038461538461538464,\n",
-       " 'T27E9.3': 0.038461538461538464,\n",
-       " 'ZK370.2': 0.038461538461538464}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.func(di_graph, **a.args)"
    ]
   },
   {
@@ -209,6 +117,61 @@
     "        \"max_iter\": 10,\n",
     "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0f988af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "di_graph = undirected_to_directed(graph_fly)\n",
+    "di_graph.number_of_nodes()\n",
+    "di_graph.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4fe14a02",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "degree_centrality() got an unexpected keyword argument 'max_iter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m degree\u001b[38;5;241m.\u001b[39mfunc(di_graph, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mdegree\u001b[38;5;241m.\u001b[39margs)\n",
+      "\u001b[0;31mTypeError\u001b[0m: degree_centrality() got an unexpected keyword argument 'max_iter'"
+     ]
+    }
+   ],
+   "source": [
+    "degree.func(di_graph, **degree.args)"
    ]
   },
   {
