--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
     "from os import makedirs, listdir, pardir, getcwd\n",
-    "from dataclasses import dataclass\n",
+    "from dataclasses import dataclass, field\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -61,15 +61,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@dataclass\n",
+    "@dataclass(frozen=False, order=False, )\n",
     "class CentralityAlgorithm:\n",
     "    \"\"\"\n",
     "    A data-class to store centrality measures arguments and other options\n",
     "    \"\"\"\n",
-    "    name: str\n",
-    "    func: object\n",
-    "    args: dict\n",
-    "    options: dict"
+    "    name: str = field(default=\"\")\n",
+    "    func: object = field(default=print)\n",
+    "    args: dict = field(default_factory=dict)\n",
+    "    options: dict = field(default_factory=dict)"
    ]
   },
   {
