--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -47,16 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c9db0df2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algorithms_to_run = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "39d0532c",
    "metadata": {},
    "outputs": [],
@@ -74,22 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "873b2fbb",
+   "execution_count": 4,
+   "id": "c9db0df2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "degree = CentralityAlgorithm(\"degree\", nx.degree_centrality, { \"max_iter\": 100 }, {})\n",
-    "algorithms_to_run.append(degree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0901df79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "algorithms_to_run = []\n",
     "algorithms_to_run.append(CentralityAlgorithm(\"degree_centrality\", nx.degree_centrality, {}, {\"direction\":\"both\"}))\n",
     "algorithms_to_run.append(CentralityAlgorithm(\"in_degree_centrality\", nx.in_degree_centrality, {}, {\"direction\":\"directed\"}))\n",
     "algorithms_to_run.append(CentralityAlgorithm(\"out_degree_centrality\", nx.out_degree_centrality, {}, {\"direction\":\"directed\"}))\n",
@@ -100,6 +80,36 @@
     "algorithms_to_run.append(CentralityAlgorithm(\"closeness_centrality\", nx.closeness_centrality, {\"distance\":\"weight\"}, {\"direction\":\"both\"}))\n",
     "algorithms_to_run.append(CentralityAlgorithm(\"harmonic_centrality\", nx.harmonic_centrality, {\"distance\":\"weight\"}, {\"direction\":\"both\"}))\n",
     "algorithms_to_run.append(CentralityAlgorithm(\"betweenness_centrality\", nx.betweenness_centrality, {\"k\":500,\"seed\":7,\"normalized\":True,\"weight\":\"weight\"}, {\"direction\":\"both\"}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0901df79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['degree_centrality',\n",
+       " 'in_degree_centrality',\n",
+       " 'out_degree_centrality',\n",
+       " 'eigenvector_centrality',\n",
+       " 'katz_centrality',\n",
+       " 'pagerank',\n",
+       " 'voterank',\n",
+       " 'closeness_centrality',\n",
+       " 'harmonic_centrality',\n",
+       " 'betweenness_centrality']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[algo.name for algo in algorithms_to_run]"
    ]
   },
   {
