--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -11,6 +11,7 @@
     "import numpy as np\n",
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
+    "import logging as log\n",
     "\n",
     "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
     "from os import makedirs, listdir, pardir, getcwd\n",
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "942890ed",
    "metadata": {},
    "outputs": [],
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9c4645e7-de80-4347-94e6-62f138e63ec1",
    "metadata": {},
    "outputs": [],
@@ -135,22 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a62886d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = {\n",
-    "    \"func\": nx.eigenvector_centrality_numpy,\n",
-    "    \"args\": {\n",
-    "        \"max_iter\": 10,\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0f988af1",
    "metadata": {},
    "outputs": [
@@ -160,7 +146,7 @@
        "27"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -170,7 +156,7 @@
        "21"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,24 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4fe14a02",
+   "execution_count": null,
+   "id": "8349750b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "degree_centrality() got an unexpected keyword argument 'max_iter'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m degree\u001b[38;5;241m.\u001b[39mfunc(di_graph, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mdegree\u001b[38;5;241m.\u001b[39margs)\n",
-      "\u001b[0;31mTypeError\u001b[0m: degree_centrality() got an unexpected keyword argument 'max_iter'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "degree.func(di_graph, **degree.args)"
+    "for i, algorithm in enumerate(algorithms_to_run):\n",
+    "    \n"
    ]
   },
   {
