--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -46,6 +46,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd52414b",
+   "metadata": {},
+   "source": [
+    "#### Helpful classes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "39d0532c",
@@ -61,6 +69,14 @@
     "    func: object = field(default=print)\n",
     "    args: dict = field(default_factory=dict)\n",
     "    options: dict = field(default_factory=dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f59fe7b8",
+   "metadata": {},
+   "source": [
+    "#### Let's compute centrality for our given data"
    ]
   },
   {
