--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -42,7 +42,15 @@
     "    \"\"\"\n",
     "    di_graph = nx.DiGraph()\n",
     "    di_graph.add_edges_from(graph.edges())\n",
-    "    return di_graph"
+    "    return di_graph\n",
+    "\n",
+    "def print_log(log_file: str, log_level: int = log.INFO):\n",
+    "    \"\"\"\n",
+    "    Prints the log file to the console\n",
+    "    \"\"\"\n",
+    "    log.basicConfig(filename=log_file, level=log_level)\n",
+    "    with open(log_file, 'r') as f:\n",
+    "        print(f.read())\n"
    ]
   },
   {
