--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -44,13 +44,11 @@
     "    di_graph.add_edges_from(graph.edges())\n",
     "    return di_graph\n",
     "\n",
-    "def print_log(log_file: str, log_level: int = log.INFO):\n",
+    "def print_log(text: str):\n",
     "    \"\"\"\n",
     "    Prints the log file to the console\n",
     "    \"\"\"\n",
-    "    log.basicConfig(filename=log_file, level=log_level)\n",
-    "    with open(log_file, 'r') as f:\n",
-    "        print(f.read())\n"
+    "    log.info(f\"[ log ]: {text}\")"
    ]
   },
   {
