--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -46,9 +46,15 @@
     "\n",
     "def print_log(text: str):\n",
     "    \"\"\"\n",
-    "    Prints the log file to the console\n",
+    "    Prints the log\n",
     "    \"\"\"\n",
-    "    log.info(f\"[ log ]: {text}\")"
+    "    log.info(f\"[ log ]: {text}\")\n",
+    "\n",
+    "def print_error(text: str):\n",
+    "    \"\"\"\n",
+    "    Prints the error\n",
+    "    \"\"\"\n",
+    "    log.warn(f\"[ error ]: {text}\")"
    ]
   },
   {
