--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "ed4553a9",
    "metadata": {},
    "outputs": [],
@@ -55,6 +55,27 @@
     "    Prints the error\n",
     "    \"\"\"\n",
     "    log.warn(f\"[ error ]: {text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8173494b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mm/5vsgc5194kqf1xnmgq439jww0000gn/T/ipykernel_61277/401754350.py:19: DeprecationWarning: The 'warn' function is deprecated, use 'warning' instead\n",
+      "  log.warn(f\"[ error ]: {text}\")\n",
+      "WARNING:root:[ error ]: Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_log(\"Hello World\")\n",
+    "print_error(\"Hello World\")"
    ]
   },
   {
