--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -48,7 +48,8 @@
     "    \"\"\"\n",
     "    Prints the log\n",
     "    \"\"\"\n",
-    "    log.info(f\"[ log ]: {text}\")\n",
+    "    print(f\"[ log ]: {text}\")\n",
+    "    # log.info(f\"[ log ]: {text}\")\n",
     "\n",
     "def print_error(text: str):\n",
     "    \"\"\"\n",
