--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -55,7 +55,8 @@
     "    \"\"\"\n",
     "    Prints the error\n",
     "    \"\"\"\n",
-    "    log.warn(f\"[ error ]: {text}\")"
+    "    print(f\"[ error ]: {text}\")\n",
+    "    # log.warn(f\"[ error ]: {text}\")"
    ]
   },
   {
