Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -114,6 +114,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1a228895",
+   "metadata": {},
+   "source": [
+    "#### Get data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "942890ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
+    "data_dir = join(parent_dir, 'data')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "0901df79",
@@ -141,17 +160,6 @@
    ],
    "source": [
     "[algo.name for algo in algorithms_to_run]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "942890ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_dir = abspath(join(join(getcwd(), pardir), pardir))\n",
-    "data_dir = join(parent_dir, 'data')"
    ]
   },
   {
