--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -90,7 +90,7 @@
    "id": "f59fe7b8",
    "metadata": {},
    "source": [
-    "#### Let's compute centrality for our given data"
+    "#### Let's pick centrality algorithms"
    ]
   },
   {
