--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -90,7 +90,7 @@
    "id": "f59fe7b8",
    "metadata": {},
    "source": [
-    "#### Let's pick centrality algorithms"
+    "#### Let's pick centrality algorithms (and the configurations)"
    ]
   },
   {
@@ -134,6 +134,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "4a197da6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_fly = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "di_graph = undirected_to_directed(graph_fly)\n",
+    "di_graph.number_of_nodes()\n",
+    "di_graph.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "0901df79",
    "metadata": {},
@@ -160,49 +194,6 @@
    ],
    "source": [
     "[algo.name for algo in algorithms_to_run]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "9c4645e7-de80-4347-94e6-62f138e63ec1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_fly = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "0f988af1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "di_graph = undirected_to_directed(graph_fly)\n",
-    "di_graph.number_of_nodes()\n",
-    "di_graph.number_of_edges()"
    ]
   },
   {
