--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -167,6 +167,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bd56f3b",
+   "metadata": {},
+   "source": [
+    "#### Compute all algorithms on our data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "0901df79",
