--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -176,6 +176,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "059e49e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snake_case = \"this_is_a_snake_case_string\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "0901df79",
    "metadata": {},
