--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -181,7 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snake_case = \"this_is_a_snake_case_string\"\n"
+    "snake_case = \"this_is_a_snake_case_string\"\n",
+    "l = snake_case.split(\"_\")"
    ]
   },
   {
