--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -177,12 +177,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "059e49e6",
+   "id": "bb779369",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def snake_case_to_camel_case(snake_case: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Converts a snake case string to a camel case string\n",
+    "    \"\"\"\n",
+    "    components = snake_case.split('_')\n",
+    "    return components[0] + \"\".join(x.title() for x in components[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "059e49e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This Is A Snake Case String'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "snake_case = \"this_is_a_snake_case_string\"\n",
-    "l = snake_case.split(\"_\")"
+    "l = snake_case.split(\"_\")\n",
+    "\" \".join(map(str.capitalize, l))"
    ]
   },
   {
