--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -181,9 +181,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def snake_case_to_camel_case(snake_case: str) -> str:\n",
+    "def snake_case_to_normal_title(snake_case: str) -> str:\n",
     "    \"\"\"\n",
-    "    Converts a snake case string to a camel case string\n",
+    "    Converts a snake case string to a normal title string\n",
     "    \"\"\"\n",
     "    components = snake_case.split('_')\n",
     "    return components[0] + \"\".join(x.title() for x in components[1:])"
