--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -186,7 +186,7 @@
     "    Converts a snake case string to a normal title string\n",
     "    \"\"\"\n",
     "    components = snake_case.split('_')\n",
-    "    return components[0] + \"\".join(x.title() for x in components[1:])"
+    "    return \" \".join(x.title() for x in components)"
    ]
   },
   {
