--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -176,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bb779369",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def snake_case_to_normal_title(snake_case: str) -> str:\n",
+    "def convert_to_normal(snake_case: str) -> str:\n",
     "    \"\"\"\n",
     "    Converts a snake case string to a normal title string\n",
     "    \"\"\"\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "059e49e6",
    "metadata": {},
    "outputs": [
@@ -201,45 +201,44 @@
        "'This Is A Snake Case String'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "snake_case = \"this_is_a_snake_case_string\"\n",
-    "l = snake_case.split(\"_\")\n",
-    "\" \".join(map(str.capitalize, l))"
+    "snake_case_to_normal_title(snake_case)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "0901df79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['degree_centrality',\n",
-       " 'in_degree_centrality',\n",
-       " 'out_degree_centrality',\n",
-       " 'eigenvector_centrality',\n",
-       " 'katz_centrality',\n",
-       " 'pagerank',\n",
-       " 'voterank',\n",
-       " 'closeness_centrality',\n",
-       " 'harmonic_centrality',\n",
-       " 'betweenness_centrality']"
+       "['Degree Centrality',\n",
+       " 'In Degree Centrality',\n",
+       " 'Out Degree Centrality',\n",
+       " 'Eigenvector Centrality',\n",
+       " 'Katz Centrality',\n",
+       " 'Pagerank',\n",
+       " 'Voterank',\n",
+       " 'Closeness Centrality',\n",
+       " 'Harmonic Centrality',\n",
+       " 'Betweenness Centrality']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[algo.name for algo in algorithms_to_run]"
+    "[snake_case_to_normal_title(algo.name) for algo in algorithms_to_run]"
    ]
   },
   {
