--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -184,6 +184,9 @@
     "def convert_to_normal(snake_case: str) -> str:\n",
     "    \"\"\"\n",
     "    Converts a snake case string to a normal title string\n",
+    "\n",
+    "    Input:  \"this_is_a_snake_case_string\"\n",
+    "    Output: \"This Is A Snake Case String\"\n",
     "    \"\"\"\n",
     "    components = snake_case.split('_')\n",
     "    return \" \".join(x.title() for x in components)"
