--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "ed4553a9",
    "metadata": {},
    "outputs": [],
@@ -69,6 +69,16 @@
     "    di_graph = nx.DiGraph()\n",
     "    di_graph.add_edges_from(graph.edges())\n",
     "    return di_graph\n",
+    "\n",
+    "def convert_to_normal(snake_case: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Converts a snake case string to a normal title string\n",
+    "\n",
+    "    Input:  \"this_is_a_snake_case_string\"\n",
+    "    Output: \"This Is A Snake Case String\"\n",
+    "    \"\"\"\n",
+    "    components = snake_case.split('_')\n",
+    "    return \" \".join(x.title() for x in components)\n",
     "\n",
     "def print_log(text: str):\n",
     "    \"\"\"\n",
@@ -176,47 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "bb779369",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_to_normal(snake_case: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Converts a snake case string to a normal title string\n",
-    "\n",
-    "    Input:  \"this_is_a_snake_case_string\"\n",
-    "    Output: \"This Is A Snake Case String\"\n",
-    "    \"\"\"\n",
-    "    components = snake_case.split('_')\n",
-    "    return \" \".join(x.title() for x in components)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "059e49e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'This Is A Snake Case String'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "snake_case = \"this_is_a_snake_case_string\"\n",
-    "snake_case_to_normal_title(snake_case)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "0901df79",
    "metadata": {},
    "outputs": [
@@ -235,13 +205,13 @@
        " 'Betweenness Centrality']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[snake_case_to_normal_title(algo.name) for algo in algorithms_to_run]"
+    "[convert_to_normal(algo.name) for algo in algorithms_to_run]"
    ]
   },
   {
