--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -186,30 +186,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "0901df79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Degree Centrality',\n",
-       " 'In Degree Centrality',\n",
-       " 'Out Degree Centrality',\n",
-       " 'Eigenvector Centrality',\n",
-       " 'Katz Centrality',\n",
-       " 'Pagerank',\n",
-       " 'Voterank',\n",
-       " 'Closeness Centrality',\n",
-       " 'Harmonic Centrality',\n",
-       " 'Betweenness Centrality']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -220,7 +200,8 @@
    "outputs": [],
    "source": [
     "for i, algorithm in enumerate(algorithms_to_run):\n",
-    "    \n"
+    "    algorithm_name = convert_to_normal(algorithm.name)\n",
+    "    print_log(f\"Running {algorithm.name} ({i+1}/{len(algorithms_to_run)})\")\n"
    ]
   },
   {
