--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -194,14 +194,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8349750b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ log ]: Running 'Degree Centrality' (1/10)\n",
+      "[ log ]: Running 'In Degree Centrality' (2/10)\n",
+      "[ log ]: Running 'Out Degree Centrality' (3/10)\n",
+      "[ log ]: Running 'Eigenvector Centrality' (4/10)\n",
+      "[ log ]: Running 'Katz Centrality' (5/10)\n",
+      "[ log ]: Running 'Pagerank' (6/10)\n",
+      "[ log ]: Running 'Voterank' (7/10)\n",
+      "[ log ]: Running 'Closeness Centrality' (8/10)\n",
+      "[ log ]: Running 'Harmonic Centrality' (9/10)\n",
+      "[ log ]: Running 'Betweenness Centrality' (10/10)\n"
+     ]
+    }
+   ],
    "source": [
     "for i, algorithm in enumerate(algorithms_to_run):\n",
     "    algorithm_name = convert_to_normal(algorithm.name)\n",
-    "    print_log(f\"Running {algorithm.name} ({i+1}/{len(algorithms_to_run)})\")\n"
+    "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n"
    ]
   },
   {
